--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,8 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.1
-yarn_mappings=1.16.1+build.21
-loader_version=0.11.3
-# Mod Properties
-mod_version=1.4.1
-maven_group=fast-reset-1.16.1-v
-archives_base_name=fast-reset-1.16.1-v
+org.gradle.jvmargs = -Xmx2G
+org.gradle.parallel = true
+org.gradle.caching = true
+
+mod_version = 1.4.2
+target_version = 1.16.1
+archives_name = fast-reset
+maven_group = fast_reset.client
