--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ org.gradle.parallel = true
 org.gradle.caching = true
 
 mod_version = 1.4.2
-target_version = 1.15.2
+target_version = 20w14infinite
 archives_name = fast-reset
 maven_group = fast_reset.client
